[project]
name = "zoomcamp-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "toyaikit>=0.0.11",
]
